test intégration + e2e